# career_tracker

./: .black  .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  LICENSE  README.md  alembic.ini  create_admin.py  docker-compose-career-production.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 051d3a273957_initial_migration.py  0afb1834114c_added_ignored.py  13a70501a742_deleted_director_interview_added_auto_.py  47448bcc7f4c_backfill_application_status_history_for_.py  65fbceb20041_add_website_url_to_cards.py  9a1a50355ffd_add_is_admin_field_to_user.py  bb1aed4fa5c4_add_application_status_history_table.py  e9772b113f4e_add_vacancy_name_to_applications.py  edfd18665db3_update_application_status_enum_add_auto_.py  f688a8173bee_rename_cards_to_applications.py
app/: auth.py  captcha.py  config.py  constants.py  crud.py  models.py  rate_limit.py  schemas.py  statistics.py  utils.py
app/api/: admin_routes.py  applications_routers.py  auth_routers.py  board_routers.py  routes.py  schemas.py  statistics_routers.py  user_routes.py
app/db/: database.py  models.py  redis.py
app/static/: app.js  app.js.bak  styles.css  styles.css.bak
app/static/css/: admin.css  auth.css  base.css  dragdrop.css  error.css  kanban.css  layout.css  modals.css  responsive.css  (+1 more)
app/templates/: 403.html  404.html  admin.html  index.html  statistics.html
tests/: conftest.py  helpers.py  test_api_applications.py  test_api_auth.py  test_auth.py  test_crud.py  test_schemas.py  test_statistics.py
(+13 files in other folders)
