[project]
name = "career-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "environs>=14.6.0",
    "fastapi[all]>=0.135.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "uvicorn[standard]>=0.42.0",
]
